--- a/content/modules/ROOT/pages/module-07.adoc
+++ b/content/modules/ROOT/pages/module-07.adoc
@@ -2,7 +2,7 @@
 
 == Introduction
 
-For this section of the lab, we will be covering common issues that occur when performing a Bare Metal Deployment and how to triage these issues. What we have found is that the most "common" solution for Openshift problems is "Delete the cluster and re-deploy it".  Unfortunately, with a bare metal deployment, that's not really a feasible answer.  We will cover some of the more common issues we have encountered here as well as mention some common troubleshooting techniques.
+For this section of the lab, we will be covering common issues that occur when performing a Bare Metal Deployment and how to triage these issues. What we have found is that the most "common" solution for Openshift problems is _Delete the cluster and re-deploy it_.  Unfortunately, with a bare metal deployment, that's not really a feasible answer.  We will cover some of the more common issues we have encountered here as well as mention some common troubleshooting techniques.
 
 [[boot_source_na]]
 == Boot Source Not Available
@@ -11,9 +11,7 @@ When you install and configure the Openshift Virtualization Operator, it will au
 
 In this lab, browse to *Storage* -> *StorageClasses* and you will see that `ocs-storagecluster-ceph-rbd` is the default StorageClass for the lab:
 
-```
-ocs-storagecluster-ceph-rbd – Default
-```
+image::module-07/08_Default_Storage_Class.png[link=self, window=blank, width=100%]
 
 If you don't have a StorageClass with the _Default_ designation, edit the StorageClass and add the following annotation:
 
@@ -25,7 +23,7 @@ If you don't have a StorageClass with the _Default_ designation, edit the Storag
 
 Another issue we have run into in the past was the downloaded Boot Sources from Red Hat existed one day and then seemed to have gone missing the next day.  The confusing part happens when you look and see the PVC for the disk image, but it still says the Boot Source is missing.  
 
-This may be a fringe case, however, the useful aspect of this is understanding how the elements tie together and understanding how things work which may help in other scenarios.
+This may be a fringe case, however, the useful aspect of this is understanding how the elements tie together and understanding how things work which may help troubleshooting other scenarios.
 
 To troubleshoot this, we need to walk through how the volume is associated with the templated.  Start by looking at the DataSource that is associated with one of the Templates that has gone missing.  By default, the Template definition has the following for the location of the DataSource:
 
@@ -60,7 +58,11 @@ parameters:
 ...
 ```
 
-We see here we need to look at the `centos7` DataSource name in the `opnshift-virtualization-os-images` namespace. Browse to *Administration* -> *CustomResourceDefinitions* and search for `DataSource` and select that Custom Resource Definition (CRD).  Click `Instances` and find the associated DataVolume for the Template and click on it to open the DataSource. Switch to the `YAML` view and look at the spec section:
+We see here we need to look at the `centos7` DataSource name in the `opnshift-virtualization-os-images` namespace. Browse to *Administration* -> *CustomResourceDefinitions* and search for `DataSource` and select that Custom Resource Definition (CRD).  
+
+Click `Instances` and find the associated DataVolume for the Template and click on it to open the DataSource. 
+
+Switch to the `YAML` view and look at the `spec` section:
 
 ```
 spec:
@@ -70,28 +72,36 @@ spec:
       namespace: openshift-virtualization-os-images
 ```
 
-Here we can see the DataSource is actually a `snapshot` and not a `pvc`.  Next, see if that `snapshot` exists by navigating to `Storage->VolumeSnapshots` and looking for the associated snapshot.  Ensure that you are looking in the `openshift-virtualization-os-images` namespace.  If you do not see this here, however, you do see a `pvc` with the same name, then the issue is that something changed in the environment (Operator update?) that caused a disassociation of the DataSource to the Template.
+Here we can see the DataSource is actually a `snapshot` and not a `pvc`.
 
-To fix this, note the StorageClass that the `pvc` exists on and  browse to *Administration* -> *CustomResourceDefinitions* and search for `StorageProfile`.  You may see more than one, select the one in the `cdi.kubervirt.io` Group. Click `Instances` and then select the StorageProfile with the same name as the StorageClass for that `pvc.` In the spec section, change or add `dataImportCronSourceFormat` to match how the images are actually stored in your environment, either `pvc` or `snapshot`.
+Next, see if that `snapshot` exists by navigating to `Storage->VolumeSnapshots` and looking for the associated snapshot.  Ensure that you are looking in the `openshift-virtualization-os-images` namespace.  If you do not see this here, however, you do see a `pvc` with the same name, then the issue is that something changed in the environment (Operator update?) that caused a disassociation of the DataSource to the Template.
+
+To fix this, note the StorageClass that the `pvc` exists on and  browse to *Administration* -> *CustomResourceDefinitions* and search for `StorageProfile`.
+
+You may see more than one, select the one in the `cdi.kubervirt.io` Group. Click `Instances` and then select the StorageProfile with the same name as the StorageClass for that `pvc`.
+
+In the spec section, change or add `dataImportCronSourceFormat` to match how the images are actually stored in your environment, either `pvc` or `snapshot`.
 
 ```
 spec:
   dataImportCronSourceFormat: pvc
 ```
 
-Once this is corrected, then all of the Boot Sources should now once again show as Available.
+Once this is corrected, then all of the Boot Sources should now once again show as *Available*.
 
 [[network_connectivity]]
 == Network Connectivity
 
-Troubleshooting network connectivity issues from your Virtual Machine could sometimes be difficult.  This module will cover some common troubleshooting techniques we have used, however, is far from a complete knowledgebase for debugging connectivity issues.  If you are having issues and suspect that they are network related, here's several things you can look at. Also, don't forget that Proof of Concept deployments that use Evaluation Entitlements include Full Support for the product.  Having the customer open a Support Case for tracking purposes can sometimes also help move the needle on issue resolution.
+Troubleshooting network connectivity issues from your Virtual Machine could sometimes be difficult.  This module will cover some common troubleshooting techniques we have used, however, it is far from a complete knowledgebase for debugging connectivity issues.  If you are having issues and suspect that they are network related, here's several things you can look at. 
+
+Don't forget that Proof of Concept deployments that use Evaluation Entitlements include *Full Support* for the product.  Having the customer open a Support Case for tracking purposes can sometimes also help move the needle on issue resolution.
 
 [[ts_lab_network]]
 === Lab Network
 
-The lab environment is a single hypervisor running multiple Virtual Machines to make this demo as cost effective as possible.  This does limit our ability to do _real world_ networking, however, we can still illustrate some techniques.
+Before we begin, a quick overview of the lab environment could be helpful in understanding how things are working. The lab environment is a single bare metal machine acting as a hypervisor running multiple Virtual Machines (Bastion, OCP Nodes) to make this demo as cost effective as possible.  This does limit our ability to do _real world_ networking, however, we can still illustrate some techniques.
 
-For this section, understanding the lab environment network will be helpful in understanding what is going on:
+The lab network deployment topology looks like this:
 
 [%header,cols="1,1"]
 |===
@@ -106,12 +116,7 @@ For this section, understanding the lab environment network will be helpful in u
 |ocp4-worker3.aio.example.com | 192.168.123.106
 |===
 
-The lab was provisioned with a single Node Network Configuration Policy.
-
-[NOTE]
-====
-Currently, only users with `Cluster Admin` rights may create Node Network Configuration Policies in Openshift Container Platform.
-====
+The lab was provisioned with a single Node Network Configuration Policy called `ovs-br-flat` which is connected to the OVS Bridge `ovs-br`.
 
 Browse to *Networking* -> *NodeNetworkConfigurationPolicy* using the left navigation menu:
 
@@ -119,34 +124,11 @@ image::module-07/01_TS_NNCP.png[link=self, window=blank, width=100%]
 
 Here we can see a single NNCP named `ovs-br-flat` exists. Click on the name, switch to the YAML view and scroll down and example the spec:
 
-```
-spec:
-  desiredState:
-    interfaces:
-      - bridge:
-          options:
-            stp: false
-          port:
-            - name: enp3s0
-        description: An OVS with enp3s0 uplink
-        name: ovs-br
-        state: up
-        type: ovs-bridge
-    ovn:
-      bridge-mappings:
-        - bridge: ovs-br
-          localnet: vm-network
-          state: present
-  nodeSelector:
-    node-role.kubernetes.io/worker: ''
-```
+image::module-07/07_NNCP_OVS_br_flat.png[link=self, window=blank, width=100%]
 
-Here we see that a bridge named `ovs-br` is created off of physical interface `enp3s0`.  Within OVN, there is a mapping from that bridge to a localnet named `vm-network`.
+Here we see that a bridge named `ovs-br` is created off of physical interface `enp3s0`.  Within OVN, there is a mapping from that bridge to a localnet named `vm-network`:
 
-The things to note here are:
-
-* Interface names (enp3s0)
-* Bridge Name (ovs-br)
+image::module-07/10_TS_Lab_NNCP_Map.png[link=self, window=blank, width=100%]
 
 [[ts_general_post_deploy]]
 === General Network Connection Issues Post-Deployment
@@ -186,7 +168,7 @@ sh-5.1#
 
 However, sometimes you may have issues on your node preventing containers from being created. For these issues, you can try to SSH to the node using the public key you injected at deployment time.  This key gets added to the `core` user on each node.
 
-From the bastion host, go ahead and try to ssh to one of the nodes as the `core` user.
+From the bastion host, the root users SSH key was pushed to all of the nodes at deployment time, go ahead and try to ssh to one of the nodes as the `core` user.
 
 [source,sh,role=execute,subs="attributes"]
 ----
@@ -216,18 +198,25 @@ At this point, it's Linux troubleshooting skills you're going to rely on first. 
 * Confirm all of your MTU sizes are correct.  They should be the same for the interface, any bond/vlan and the bridges.
 * Check the routes, ensure you have a default route and can ping it
 
-RHCOS is a very minimal image and lacks troubleshooting tools such as  `tcpdump`.  You can gain access to this by executing the command `toolbox` at the command prompt on any node.  Go ahead and try this on one of your Openshift Cluster Nodes:
+RHCOS is a very minimal image and lacks troubleshooting tools such as  `tcpdump`.  You can gain access to this by executing the command `toolbox` at the command prompt on any node.  Go ahead and try this on one of your Openshift Cluster Nodes.
 
- This will launch a `toolbox` container and connect you to it which has some useful troubleshooting tools, `tcpdump` among them.
+image::module-07/11_TS_Toolbox.png[link=self, window=blank, width=100%]
 
 [[ts_vm_network_troubleshooting]]
 === Virtual Machine Network Connection Issues
 
-Virtual Machine NICs are attached to a Network Attachment Devices (NAD).  These Network Attachment Devices are then associated with a Node Network Configuration Policy (NNCP).  The Node Network Configuration Policy defines the connection from the Openshift Software Defined Network (OVN) to the physical interfaces on the hardware nodes. Network Attachment Definitions and Node Network Configuration Policies that are created in the `default` project are accessible by all other projects.
+Virtual Machine *NICs* are attached to a *Network Attachment Devices* (NAD).  These *Network Attachment Devices* are then associated with a *Node Network Configuration Policy* (NNCP).  The *Node Network Configuration Policy* also defines the connection from the Openshift Software Defined Network (*OVN*) to the physical interfaces on the hardware nodes. 
 
-Because this lab environment is not using real hardware, we are going to need to create a network on the hypervisor that we can use for this lab section.
+*Network Attachment Definitions* and *Node Network Configuration Policies* that are created in the `default` project are accessible by all other projects.
 
-==== Lab Setup
+[NOTE]
+====
+Currently, only users with `Cluster Admin` rights may create Node Network Configuration Policies in Openshift Container Platform.
+====
+
+Because this lab environment is not using real hardware, we are going to need to create a network on the hypervisor that we can use for this lab section. This will be the equivalent of adding NIC Hardware to the Bare metal node and configuring Virtual Machines to use it.
+
+==== [.underline]#Lab Setup#
 
 SSH to your Lab Hypervisor server and execute the following to create a new KVM Virtual Network called `ocpvirt-net`:
 
@@ -252,6 +241,10 @@ sudo virsh net-start ocpvirt-net
 sudo virsh net-autostart ocpvirt-net
 ```
 
+We can confirm the Network was created and is started:
+
+image::module-07/12_virsh_net_list.png[link=self, window=blank, width=100%]
+
 Next we need to add the new interface to each of our Virtual Machines:
 
 ```
@@ -271,24 +264,22 @@ Logging into your Bastion host as well as your OCP Nodes, you should now see a n
 | Worker Nodes | enp11s0
 |===
 
-Let's give your Bastion Host an IP address of `192.168.100.10` and we can use that to ping from our Virtual Machines to confirm connectivity.  Login to the bastion host as root and execute the following:
+Let's give the Bastion Host an IP address of `192.168.100.10` that we can use to ping from our Virtual Machines to confirm connectivity.  Login to the bastion host as *root* and execute the following:
 
 ```
 nmcli con mod "Wired connection 1" connection.id ocpvirt ipv4.method manual ipv4.addresses 192.168.100.10/24
 nmcli con up ocpvirt
 ```
 
-=== Lab Content
+=== [.underline]#Lab Content#
 
-First create a Network Attachment Device for our Virtual Machine we created in xref:module-01.adoc#create_vm[Module 01]. 
+First create a *Network Attachment Definition* for our Virtual Machine we created in xref:module-01.adoc#create_vm[Module 01]. 
 
-Network Attachment Definitions created in the `default` project can be used by any other project in the Openshift Cluster. Network Attachment Definitions created in a specific project are only accessible to Virtual Machines created in that specific project.  For this lab, we will create the Network Attachment Definition in the `default` project.
+Any *Network Attachment Definition* created in the `default` project can be used by _any_ other project in the Openshift Cluster. A *Network Attachment Definition* created in a specific project is only accessible to Virtual Machines created in that specific project.  For this lab, we will create the *Network Attachment Definition* in the `default` project.
 
-Browse to *Networking* -> *NetworkAttachmentDefinitions* and ensure that `default` is selected at the top in the Project drop doan and click *Create Network Attachment Definition*.
+Browse to *Networking* -> *NetworkAttachmentDefinitions* and ensure that `default` is selected at the top in the Project drop down and click *Create Network Attachment Definition*.
 
-Switch to the YAML view because in the *Form View*, whenever you give it a name, it appends other random names to the end of it making consistency in performing a repeatable lab challenging.
-
-Copy and paste the following YAML for the NAD and click *Create*:
+Switch to the `YAML` view and paste the following YAML for the NAD and click *Create*:
 
 ```
 apiVersion: k8s.cni.cncf.io/v1
@@ -308,6 +299,7 @@ spec:
       "ipam": {}
     }
 ```
+** We use the YAML view because in the *Form View*, whenever you give your NAD a name, it appends other random names to the end of it making consistency in performing a repeatable lab challenging.
 
 [NOTE]
 ====
@@ -316,24 +308,26 @@ When creating this manually, `netAttachDefName` needs to be in the format of *na
 
 Let's add a new Network Interface to our Virtual Machine for the NAD that we just created. 
 
-Browse to *Virtualization* -> *VIrtualMachines* and you should see the Virtual Machine you created. If you do not, ensure the `Project` drop down is set to the Project where you created your Virtual Machine.
+Browse to *Virtualization* -> *VirtualMachines* and you should see the Virtual Machine you created. If you do not, ensure the `Project` drop down is set to the Project where you created your Virtual Machine.
 
 [NOTE]
 ====
-Hot adding/removing NICs is not supported (yet) with Openshift Virtualization.  For the NIC to be removed, you must stop the Virtual Machine by clicking the square button at the top right to stop your Virtual Machine.  The Virtual Machines section in Openshift does not auto-refresh, so click off of this page to somewhere else, like the Catalog and come back and the NIC should no longer be there.
+Hot adding/removing NICs is somehwat supported with Openshift Virtualization.  When adding a NIC, the new NIC can be attached by either live-migrating the Virtual Machine _or_ stopping and re-starting the Virtual Machine.  For this lab, we will just stop the Virtual Machine.
 ====
 
-When you see your Virtual Machine, click the name, *fedora*, and stop your virtual machine.  After the Virtual Machine is stopped, navigate to the *Configuration* tab along the top. Below the tabs, on the left side you will see various Configuration Sections for your Virtual Machine.  Select *Network* from the left side of the pane below that.
-+
+Select the *fedora* Virtual machine and stop it by clicking the square button at the top right of the page.  After the Virtual Machine is stopped, navigate to the *Configuration* tab at the top of the page. Below the tabs, on the left side you will see various Configuration Sections for your Virtual Machine.
+
+Select *Network* from the left side of the pane below that.
+
 image::module-07/02_TS_VM_Configuration_Network.png[link=self, window=blank, width=100%]
 
-You will see a single NIC that is connected to the `Pod networking`. Let's add a new Network Interface for the NAD that we just created. 
+You will see a single NIC that is connected to the `Pod networking`. We can add this for this exercise, however most POCs that we have done have had us remove this as they don't want their Virtual Machines to have unnecessary network connections. Let's add a new Network Interface for the NAD that we just created. 
 
 Click *Add network interface* and fill in the dialog presented.  You can provide any name that you want here, the important part is dropping down the *Network* selection and selecting the Network Attachment Definition we created earlier.  Once complete, click *Save*.
 
 At the top of the page, click the blue triangle to start the Virtual Machine.
 
-Once the Virtual Machine is started, switch to the *Console* tab and login to the VM using *fedora* and the password you set for the user.  Once you login, look a the network configuration and you will see 2 NICs, one for the Pod Network and one for the new NIC we just added:
+Once the Virtual Machine is started, switch to the *Console* tab and login to the VM using *fedora* and the password you set for the user back in Module 01.  Once you login, look a the network configuration and you will see 2 NICs, one for the Pod Network and one for the new NIC we just added.
 
 Let's configure the NIC we just added and try pinging the bastion host:
 
