--- a/content/modules/ROOT/pages/module-00.adoc
+++ b/content/modules/ROOT/pages/module-00.adoc
@@ -2,7 +2,7 @@
 
 == Installation
 
-For the lab portion of this training, the Openshift environment is already pre-provisioned, which unfortunately skips a major hurdle which is encountered as part of these Proof of Concept deliveries.  As many of you are aware, there's several different ways to deploy Openshift at a customer site.  The two methods that we have found the most success with both utilizae the Assisted Installer:
+For the lab portion of this training, the Openshift environment is already pre-provisioned, which unfortunately skips a major hurdle which is encountered as part of these Proof of Concept deliveries.  As many of you are aware, there's several different ways to deploy Openshift at a customer site.  The two methods that we have found the most success with both utilize the Assisted Installer:
 
 * Interactive Assisted Installer
 * Local Agent Installer
@@ -12,7 +12,7 @@ We estimate 99% of the deployments we do for a Proof of Concept utilize the Inte
 
 == Operators
 
-During installation, you have the option to include various Operators as part of the deployment process.  Deployment of Operators is something that is second nature for those familiar with Openshift, however, for many of the customers coming from other Virtualization Platforms this concept is new.  Due to this reason, many times we choose not to install the Operators at Deployment Time.
+During installation, you have the option to include various Operators as part of the deployment process.  Deployment of Operators is something that is second nature for those familiar with Openshift, however, for many of the customers coming from other Virtualization Platforms *this concept is new*.  Due to this reason, many times we choose not to install the Operators at Deployment Time and instead take it as an opportunity for our customers to learn about Operator deployment.
 
 For your lab environment, these will be pre-installed in an effort to save time, however, this section will cover the Operators that we typically install and configure as part of the Proof of Concept delivery and how they are typically configured.
 
@@ -23,26 +23,34 @@ For Proof of Concept deployments, we try to position ODF backed by Ceph as the s
 * Virtual Machines start almost instantly
 * Storage space is saved for VM's using the same Image Base
 
-Additionally, this is "most like" VMWare environments where the customers are utilizing VSAN as the back-end storage.
+Additionally, this is "_most like_" VMWare environments where the customers are utilizing VSAN as the back-end storage.
 
 When we deploy this via the Operator, we use the default settings for the deployment.
 
 [[virtualization_operator]]
 === Openshift Virtualization
-Sometimes customers would like to utilize a dedicated migration network when live migrations are performed.  This can be configured when installing the Openshift Virtualization Operator, or it may also be configured after deployment.
+Sometimes customers would like to utilize a dedicated migration network when live migrations are performed.  This can be configured when installing the Openshift Virtualization Operator, or it may also be configured after deployment. This is a good Operator to use to demonstrate Operator Configuration as part of the deployment of the Operator since most of the ones we do install, require little to no configuration.
 
-Ensure that you create the *Network Attachment Definition* prior to configuring this.
+Ensure that you create the *Network Attachment Definition* for the VM Migration Network prior to configuring this.
 
-Other than that, when we deploy this via the Operator, we use the default settings for the deployment.
+Other than that, when we deploy this via the Operator, we use the default settings for the deployment as well as the HyperConverged creation.
 
 [[nmstate_operator]]
 === NMState Operator
-The NMState Operator
+This will give us the *NodeNetworkConfigurationPolicy* link in the Console UI and the CRD's necessary to perform network configuration for Virtual Machines.
 
-This will give us the *NodeNetworkConfigurationPolicy* link in the Console UI.
-
-When we deploy this via the Operator, we use the default settings for the deployment.
+When we deploy this via the Operator, we use the default settings for the deployment as well as the NMState creation.
 
 [[mtv_operator]]
 === Openshift Migration Toolkit for Virtualization
+This provides us with the mechanism to enable our customers to move their workloads from other locations on to Openshift Virtualization.  Today, MTV can migrate workloads from:
+
+* VMware vSphere
+* Red Hat Virtualization (RHV)
+* OpenStack
+* Open Virtual Appliances (OVAs) that were created by VMware vSphere
+* Remote OpenShift Virtualization clusters
+
+The list of sources has been gradually increasing over time, so always check to see what the latest list is before talking to a customer.
+
 When we deploy this via the Operator, we use the default settings for the deployment.
